<resources>
    <string name="app_name">Donut Data 3</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_donut_list">Donut List</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_wikipedia">Wikipedia</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>

    <!-- donut list item layout -->
    <string name="donut_picture">Picture of donut</string>
    <string name="delete_donut">delete donut</string>
    <string name="bullet">\u25CB</string>
    <string name="dash">-</string>
    <string name="not_low_fat">Not low fat</string>

    <!-- donut list fragment layout -->
    <string name="add_donut_info">Add more donut info!</string>
    <plurals name="donut_count">
        <item quantity="one">Donut Count: %1$d donut</item>
        <item quantity="other">Donut Count: %1$d donuts</item>
    </plurals>

    <!-- new/edit donut fragments -->
    <string name="donut_name">Donut name</string>
    <string name="donut_description">Description</string>
    <string name="donut_rating">Rating</string>
    <string name="button_save">Save</string>
    <string name="low_fat">Low fat</string>
    <string name="button_change_image">Change Image</string>
    <string name="brand">Brand</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="save_donut_info">Save donut info</string>

    <!-- select image fragment -->
    <string name="select_a_donut_image">Select a donut image</string>

    <!-- fragment labels in navigation -->
    <string name="fragment_donut_list">Donut List</string>
    <string name="fragment_select_image">Select Image</string>
    <string name="fragment_wikipedia">Wikipedia</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_new_donut">New Donut</string>
    <string name="fragment_edit_donut">Edit Donut</string>
    <string name="fragment_about_dialog">About</string>
    <string name="fragment_confirmation_dialog">Confirmation</string>
    <string name="fragment_date_dialog">Date</string>
    <string name="fragment_time_dialog">Time</string>

    <!-- about dialog -->
    <string name="author">Alex Tetervak, Sheridan College, 2021</string>

    <!-- confirmation dialog -->
    <string name="default_confirm">Do you really want it?</string>
    <string name="confirm_delete_message">Do you want to remove this donut?</string>
    <string name="confirm_clear_message">Do you want to delete all donuts?</string>
    <string name="do_not_ask_me_again">Do not ask me again.</string>

    <!-- settings fragment -->
    <string name="alright">Alright</string>
    <string name="donut_brand">Donut brand</string>
    <string name="low_fat_donut">A low fat donut</string>
    <string name="not_a_low_fat_donut">Not a low fat donut</string>
    <string name="confirmation_dialogs">Confirmation Dialogs</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_on">Ask to confirm individual deletes</string>
    <string name="confirm_delete_off">Don\'t ask to confirm individual deletes</string>
    <string name="confirm_clear_title">Confirm Clear</string>
    <string name="confirm_clear_on">Ask to confirm clearing the history</string>
    <string name="confirm_clear_off">Don\'t ask to confirm clearing the history</string>

    <!-- wiki fragment -->
    <string name="wiki_donut_ulr">https://en.wikipedia.org/wiki/Doughnut</string>

    <!-- home fragment -->
    <string name="database_demo_app">Database Demo App</string>
    <string name="button_add_donut">Add Donut</string>
    <string name="button_list_donuts">List Donuts</string>


    <string name="sort_by">Sort by …</string>
    <string name="menu_sort_by_name">Name</string>
    <string name="menu_sort_by_date">Date</string>
    <string name="menu_sort_by_rating">Rating</string>
    <string name="menu_sort_by_id">Id</string>
    <string name="donut_list">Donut List</string>
    <string name="sorting">Sorting</string>


</resources>
