<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/confirmation_dialogs">

        <SwitchPreference
            android:defaultValue="true"
            android:key="confirm_delete"
            android:title="@string/confirm_delete_title"
            android:summaryOn="@string/confirm_delete_on"
            android:summaryOff="@string/confirm_delete_off"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="confirm_clear"
            android:title="@string/confirm_clear_title"
            android:summaryOn="@string/confirm_clear_on"
            android:summaryOff="@string/confirm_clear_off"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Default Values">

        <EditTextPreference
            android:defaultValue=""
            android:key="default_description"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/donut_description"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/donut_brand_name"
            android:entryValues="@array/donut_brand_index"
            android:key="default_brand_index"
            android:title="@string/donut_brand"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="default_low_fat"
            android:title="@string/low_fat"
            android:summaryOn="@string/low_fat_donut"
            android:summaryOff="@string/not_a_low_fat_donut"/>

    </PreferenceCategory>

</PreferenceScreen>