<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort_by">
        <menu>
            <group android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_by_name"
                    android:title="@string/menu_sort_by_name"/>
                <item
                    android:id="@+id/menu_sort_by_date"
                    android:title="@string/menu_sort_by_date"/>
                <item
                    android:id="@+id/menu_sort_by_rating"
                    android:title="@string/menu_sort_by_rating"/>
                <item
                    android:id="@+id/menu_sort_by_id"
                    android:title="@string/menu_sort_by_id"
                    android:checked="true"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_clear"
        android:title="@string/menu_clear"
        app:showAsAction="always" />
</menu>