<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donut_list"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_donut_list" />
        <item
            android:id="@+id/nav_wikipedia"
            android:icon="@drawable/ic_wikipedia"
            android:title="@string/menu_wikipedia" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
</menu>